@@ -1,8 +1,9 @@
 from batou.component import Component
+from batou.utils import Attribute
 
 
 class ZEO(Component):
 
-    port = '9001'
+    port = Attribute(int, 9001)
 
     features = ['test', 'test2']
